--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring jpa. .hibernate.ddl-autoupdate
+spring datasource url=
+spring datasource. username admin
+spring datasource password admin
+spring jpa.database-platform-org.hibernate.dialect.MysQLBDialect
 
