--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring jpa. .hibernate.ddl-autoupdate
-spring datasource url=
-spring datasource. username admin
-spring datasource password admin
+spring datasource url=jdbc:mysql://localhost:3306/argprueba?useSSL=false&serverTimezone=UTC
+spring datasource. username root
+spring datasource password 
 spring jpa.database-platform-org.hibernate.dialect.MysQLBDialect
 
