--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,18 @@
                     <artifactId>mysql-connector-java</artifactId>
                     <scope>runtime</scope>
                 </dependency>
-
+	 <dependency>
+	  <groupId>org.hibernate.orm</groupId>
+	  <artifactId>hibernate-core</artifactId>
+	  <version>6.1.6.Final</version>
+	  <type>jar</type>
+	 </dependency>
+	 <dependency>
+	  <groupId>com.jayway.jsonpath</groupId>
+	  <artifactId>json-path</artifactId>
+	  <version>2.7.0</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 	
 	<build>
